<resources>
    <string name="app_name">FastTripPlanner</string>
    <string name="MainActivityLabelDestino">Insira o Destino:</string>
    <string name="MainActivityLabelDias">Insira o total de dias:</string>
    <string name="MainActivityLabelOrcamento">Insira o orçamento diário:</string>
    <string name="next">Prosseguir</string>
    <string name="MainActivityLabelHospedagem">Selecione o tipo de hospedagem</string>
    <string name="MainActivityLabelEconomica">Econômica</string>
    <string name="MainActivityLabelConforto">Conforto</string>
    <string name="MainActivityLabelLuxo">Luxo</string>
    <string name="MainActivityLabelServicos">Escolhas quais serviços extras deseja:</string>
    <string name="MainActivityLabelTransporte">Transporte - R$ 300,00</string>
    <string name="MainActivityLabelAlimentacao">Alimentação - R$ 50,00 por dia</string>
    <string name="MainActivityLabelPasseios">Passeios -  R$ 120,00 por dia</string>
    <string name="finish">Finalizar</string>
    <string name="MainActivityLabelValorTotal">Valor total:</string>
    <string name="MainActivityLabelTotalDias">Duração da viagem:</string>
    <string name="MainActivityLabelTipoHospedagem">Hospedagem escolhida:</string>
    <string name="MainActivityLabelServicosSelecionados">Serviços escolhidos:</string>
    <string name="restart">Recomeçar</string>
    <string name="back">Voltar</string>
    <string name="MainActivityLabelToDestino">"Destino: "</string>
    <string name="MainActivityLabelModoEconomico">Modo econômico</string>
</resources>