<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="32sp"
        android:textAlignment="center"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/labelDestino"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MainActivityLabelDestino"
        android:textSize="24sp"
        android:paddingTop="15dp"
        android:paddingHorizontal="10dp"
        android:layout_marginHorizontal="10dp"
        android:labelFor="@+id/destino"
        app:layout_constraintTop_toBottomOf="@+id/titulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <EditText
        android:id="@+id/destino"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="24sp"
        android:layout_marginHorizontal="10dp"
        android:paddingHorizontal="10dp"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/labelDestino"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/labelDias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MainActivityLabelDias"
        android:textSize="24sp"
        android:paddingTop="15dp"
        android:paddingHorizontal="10dp"
        android:layout_marginHorizontal="10dp"
        android:labelFor="@+id/dias"
        app:layout_constraintTop_toBottomOf="@+id/destino"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <EditText
        android:id="@+id/dias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="24sp"
        android:layout_marginHorizontal="10dp"
        android:paddingHorizontal="10dp"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/labelDias"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/labelOrcamento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MainActivityLabelOrcamento"
        android:textSize="24sp"
        android:paddingTop="15dp"
        android:paddingHorizontal="10dp"
        android:layout_marginHorizontal="10dp"
        android:labelFor="@+id/orcamento"
        app:layout_constraintTop_toBottomOf="@+id/dias"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <EditText
        android:id="@+id/orcamento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="24sp"
        android:layout_marginHorizontal="10dp"
        android:paddingHorizontal="10dp"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/labelOrcamento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/next"
        android:paddingVertical="15dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>